examples/type-errors/let-bool-arithmetic.hg
let x = true in
x + 1
